# ic-canada-test

./: README.md  note.txt
backend/: pyproject.toml  requirements.txt
backend/main/: settings.py
backend/users/: models.py  serializer.py  urls.py  views.py
backend/users/migrations/: 0002_user_number.py
frontend/: package-lock.json  package.json
frontend/src/app/: User.ts  app.service.ts
frontend/src/app/components/add-user/: add-user.component.html  add-user.component.ts
frontend/src/app/components/update-user/: update-user.component.html  update-user.component.ts
frontend/src/app/components/view-user/: view-user.component.html  view-user.component.ts
